syntax = "proto3";

service SpidHandler {
    rpc QuerySpid (ClientRequest) returns (ServerResponse) {}
    rpc GetSpidInfo (ClientRequest) returns (ServerResponse) {}
    rpc RegisterSpid (ClientRequest) returns (ServerResponse) {}
    rpc UpdateBatteryInfo (ClientRequest) returns (ServerResponse) {}
    rpc UpdateSpidLocation (ClientRequest) returns (ServerResponse) {}
    rpc DeleteSpid (ClientRequest) returns (ServerResponse) {}
}

message ClientRequest {
    string id = 1;
    string type = 2;
    string body = 3;
}

message ServerResponse {
    string id = 1;
    string type = 2;
    bool ok = 3;
    string body = 4;
}